src/test/ui/feature-gates/feature-gate-custom_attribute.stderr
error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:7:3
   |
LL | #[fake_attr]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:8:3
   |
LL | #[fake_attr(100)]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:9:3
   |
LL | #[fake_attr(1, 2, 3)]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:10:3
   |
LL | #[fake_attr("hello")]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:11:3
   |
LL | #[fake_attr(name = "hello")]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:12:3
   |
LL | #[fake_attr(1, "hi", key = 12, true, false)]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:13:3
   |
LL | #[fake_attr(key = "hello", val = 10)]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:14:3
   |
LL | #[fake_attr(key("hello"), val(10))]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:15:3
   |
LL | #[fake_attr(enabled = true, disabled = false)]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:16:3
   |
LL | #[fake_attr(true)]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:17:3
   |
LL | #[fake_attr(pi = 3.14159)]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_attr` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:18:3
   |
LL | #[fake_attr(b"hi")]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `fake_doc` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/feature-gate-custom_attribute.rs:19:3
   |
LL | #[fake_doc(r"doc")]
   |   ^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0658`.
